# callm-open-runway

./: .gitignore  CODICE.md  COMMANDS.md  MAKITA.md  PROJECT_RULES.md  README.md  callm.sqlite  ideia.txt  package-lock.json  package.json  tsconfig.base.json  vitest.config.ts
.callm/: ZEN.md  blueprint.json
.callm/agents/: architect.md
.callm/backend/: BACKEND.md
.callm/frontend/: FRONTEND.md
.callm/git/: WORKFLOW.md
.callm/group-agents/: TIER_1.md
.callm/hygiene/: HYGIENE.md
.callm/llms/: models-config.md
.callm/mcps/: DATABASE_MCP.md
.callm/neurons/: NEURONS.md  STACK_IQ.md
.callm/skills/: ProjectGitaSkill.ts  SKILLS.md  SecurityAuditSkill.ts  security-audit.md  token-optimizer.md
.callm/synapses/: ARCH_SYNAPSE.md  SYNAPSES.md
.callm/workflows/: audit-hygiene.json  git-flow.md
.github/workflows/: callm-ci.yml
apps/cli/: package.json  tsconfig.json
apps/cli/src/: repl.ts
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/: README.md
apps/server/: callm.sqlite  package.json  tsconfig.json
apps/web/: package.json  tailwind.config.js  vite.config.ts
docs/: index.html
scripts/: verify-callm.ts
test-results/: .last-run.json
tests/: canary.ts  integration.test.ts
tests/cli/: Gita.test.ts
tests/compliance/: CallmCompliance.test.ts
tests/e2e/: Dashboard.test.ts
tests/integration/: AgentOrchestrator.test.ts  UserStory.test.ts
tests/unit/: HuggingFaceService.test.ts  LlmService.test.ts  LocalLlamaService.test.ts  MemoryService.test.ts  SessionService.test.ts
(+20 files in other folders)
